seamless/tests/api_body_compile_tests/11_enum_cant_mix_unit_named.rs
use seamless::ApiBody;

#[ApiBody]
enum Lark {
    UnitField,
    NamedFields {}
}

fn main () {

}